--- a/frontend/react-web/src/styles/custom.scss
+++ b/frontend/react-web/src/styles/custom.scss
@@ -5,6 +5,18 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:700');
 @import "variables";
 
+body {
+  background-color: #eef2f5;
+}
+
+.custom-icon {
+  height: $font-size-base * .75;
+  width: $font-size-base * .75;
+}
+
+.icon-hover:hover {
+  color: red; /* Set the desired hover color */
+}
 
 .navbar-nav .nav-link {
   font-size: $font-size-base * .75;
@@ -22,23 +34,46 @@
 //  }
 //}
 
+// TODO: navbar text color white... ?
+
 @include media-breakpoint-down(md) {
   .navbar-nav .nav-link {
-    height: 32px !important;
+    height: $spacer * 2 !important;
   }
 
   .navbar {
-    padding: 8px;
+    padding: $spacer * .5;
   }
 
   .navbar-brand, .navbar-brand.img {
-    height: 48px;
+    height: $spacer * 3;
+  }
+}
+
+.card {
+  font-size: $font-size-base * .75;
+  
+  &-header {
+    display: flex;
+    height: $spacer * 4;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  &-body {
+    padding-top: $spacer * .5;
+    overflow-y: auto;
+  }
+  
+  &-footer {
+    background-color: $white !important;
+    padding-bottom: $spacer;
   }
 }
 
 .navbar-nav {
   .nav-link {
-    height: 82px;
+    height: $spacer * 5;
     display: flex;
     align-items: center;
     justify-content: center;
