--- a/frontend/react-web/src/styles/variables.scss
+++ b/frontend/react-web/src/styles/variables.scss
@@ -2,7 +2,6 @@ $primary: #005aa1;
 $secondary: #7E7E7E;
 $border-radius: 0;
 $card-border-width: 0;
-$body-bg: #eef2f5;
 $font-family-base: "Open Sans", sans-serif;
 $nav-link-color: $secondary;
 $nav-link-font-weight: 700;
@@ -15,3 +14,11 @@ $navbar-light-hover-color: $primary;
 $nav-tabs-border-width: 0;
 $grid-columns: 24;
 $font-size-base: 1rem;
+$h2-font-size: 1.375rem;
+$font-weight-base: 400;
+$table-th-font-weight: $font-weight-base;
+$white: #FFF;
+$card-bg: $white;
+$bg-light: $white;
+$spacer: 1rem;
+$card-cap-padding-x: $spacer;
