--- a/frontend/react-web/src/styles/variables.scss
+++ b/frontend/react-web/src/styles/variables.scss
@@ -14,6 +14,7 @@ $navbar-light-hover-color: $primary;
 $nav-tabs-border-width: 0;
 $grid-columns: 24;
 $font-size-base: 1rem;
+$h1-font-size: 2rem;
 $h2-font-size: 1.375rem;
 $font-weight-base: 400;
 $table-th-font-weight: $font-weight-base;
@@ -22,3 +23,13 @@ $card-bg: $white;
 $bg-light: $white;
 $spacer: 1rem;
 $card-cap-padding-x: $spacer;
+$font-weight-light: 300;
+$gray-300: #dee2e6;
+$btn-border-radius: 4px;
+$btn-border-width: 0;
+$btn-padding-y: .2rem;
+$gray-800: #343a40;
+$input-border-color: $gray-800;
+$border-radius-sm: .25rem;
+$input-border-radius: $border-radius-sm;
+$zindex-popover: 1070;
