--- a/frontend/react-web/src/styles/variables.scss
+++ b/frontend/react-web/src/styles/variables.scss
@@ -33,3 +33,7 @@ $input-border-color: $gray-800;
 $border-radius-sm: .25rem;
 $input-border-radius: $border-radius-sm;
 $zindex-popover: 1070;
+$red: #dc3545;
+$danger: $red;
+$btn-link-hover-color: $danger;
+$btn-link-color: $secondary;
