--- a/frontend/react-web/src/main.scss
+++ b/frontend/react-web/src/main.scss
@@ -1,4 +1,5 @@
 @import "../node_modules/bootstrap/scss/functions";
 @import "./styles/variables";
+@import "./styles/map-amends";
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "./styles/custom";
