--- a/frontend/react-web/src/styles/variables.scss
+++ b/frontend/react-web/src/styles/variables.scss
@@ -35,5 +35,5 @@ $input-border-radius: $border-radius-sm;
 $zindex-popover: 1070;
 $red: #dc3545;
 $danger: $red;
-$btn-link-hover-color: $danger;
+$btn-link-hover-color: $primary;
 $btn-link-color: $secondary;
